@@ -24,7 +24,6 @@
 package org.openjdk.bench.jdk.incubator.vector;
 
 import java.lang.foreign.Arena;
-import java.lang.foreign.SegmentScope;
 import java.nio.ByteOrder;
 import java.util.concurrent.TimeUnit;
 
@@ -90,8 +89,8 @@ public class TestLoadStoreShorts {
     srcSegmentHeap = MemorySegment.ofArray(new byte[size]);
     dstSegmentHeap = MemorySegment.ofArray(new byte[size]);
 
-    srcSegment = MemorySegment.allocateNative(size, SPECIES.vectorByteSize(), SegmentScope.auto());
-    dstSegment = MemorySegment.allocateNative(size, SPECIES.vectorByteSize(), SegmentScope.auto());
+    srcSegment = Arena.ofAuto().allocate(size, SPECIES.vectorByteSize());
+    dstSegment = Arena.ofAuto().allocate(size, SPECIES.vectorByteSize());
 
     this.longSize = longSize;
 
@@ -161,9 +160,9 @@ public class TestLoadStoreShorts {
 
   @Benchmark
   public void segmentNativeConfined() {
-    try (final var arena = Arena.openConfined()) {
-      final var srcSegmentConfined = MemorySegment.ofAddress(srcSegment.address(), size, arena.scope());
-      final var dstSegmentConfined = MemorySegment.ofAddress(dstSegment.address(), size, arena.scope());
+    try (final var arena = Arena.ofConfined()) {
+      final var srcSegmentConfined = srcSegment.reinterpret(arena, null);
+      final var dstSegmentConfined = dstSegment.reinterpret(arena, null);
 
       for (long i = 0; i < SPECIES.loopBound(srcArray.length); i += SPECIES.length()) {
         var v = ShortVector.fromMemorySegment(SPECIES, srcSegmentConfined, i, ByteOrder.nativeOrder());
